// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render with levels @250px 1`] = `
<div>
  <div
    class="wrapper"
  >
    <svg
      class="barChart"
      height="200"
    >
      <g
        class="x-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="transform: translateY(200px);"
        text-anchor="middle"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            0%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(50.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            20%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(100.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            40%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(150.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            60%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(200.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            80%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(250.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            100%
          </text>
        </g>
      </g>
      <g
        class="y-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,33.33333333333334)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,77.77777777777779)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,122.22222222222223)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,166.66666666666666)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            d
          </text>
        </g>
      </g>
      <rect
        class="level"
        data-testid="level-high"
        fill="#3baa34"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="24.999999999999993"
        x="225"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-mid"
        fill="#fd9c00"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="100"
        x="125"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-low"
        fill="#e30713"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="125"
        x="0"
        y="0"
      />
      <rect
        class="bar"
        data-testid="bar-a"
        fill="#00263d"
        height="22.22222222222222"
        width="250"
        x="0"
        y="22.22222222222223"
      />
      <rect
        class="bar"
        data-testid="bar-b"
        fill="#00263d"
        height="22.22222222222222"
        width="37.5"
        x="0"
        y="66.66666666666667"
      />
      <rect
        class="bar"
        data-testid="bar-c"
        fill="#00263d"
        height="22.22222222222222"
        width="75"
        x="0"
        y="111.11111111111111"
      />
      <rect
        class="bar"
        data-testid="bar-d"
        fill="#00263d"
        height="22.22222222222222"
        width="25"
        x="0"
        y="155.55555555555554"
      />
    </svg>
  </div>
</div>
`;

exports[`Render with levels @500px 1`] = `
<div>
  <div
    class="wrapper"
  >
    <svg
      class="barChart"
      height="200"
    >
      <g
        class="x-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="transform: translateY(200px);"
        text-anchor="middle"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            0%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(100.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            20%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(200.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            40%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(300.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            60%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(400.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            80%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(500.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            100%
          </text>
        </g>
      </g>
      <g
        class="y-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,33.33333333333334)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,77.77777777777779)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,122.22222222222223)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,166.66666666666666)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            d
          </text>
        </g>
      </g>
      <rect
        class="level"
        data-testid="level-high"
        fill="#3baa34"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="49.999999999999986"
        x="450"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-mid"
        fill="#fd9c00"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="200"
        x="250"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-low"
        fill="#e30713"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="250"
        x="0"
        y="0"
      />
      <rect
        class="bar"
        data-testid="bar-a"
        fill="#00263d"
        height="22.22222222222222"
        width="500"
        x="0"
        y="22.22222222222223"
      />
      <rect
        class="bar"
        data-testid="bar-b"
        fill="#00263d"
        height="22.22222222222222"
        width="75"
        x="0"
        y="66.66666666666667"
      />
      <rect
        class="bar"
        data-testid="bar-c"
        fill="#00263d"
        height="22.22222222222222"
        width="150"
        x="0"
        y="111.11111111111111"
      />
      <rect
        class="bar"
        data-testid="bar-d"
        fill="#00263d"
        height="22.22222222222222"
        width="50"
        x="0"
        y="155.55555555555554"
      />
    </svg>
  </div>
</div>
`;

exports[`Render with levels reversed 1`] = `
<div>
  <div
    class="wrapper"
  >
    <svg
      class="barChart"
      height="200"
    >
      <g
        class="x-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="transform: translateY(200px);"
        text-anchor="middle"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            0%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(100.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            20%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(200.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            40%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(300.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            60%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(400.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            80%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(500.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            100%
          </text>
        </g>
      </g>
      <g
        class="y-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,33.33333333333334)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,77.77777777777779)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,122.22222222222223)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,166.66666666666666)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            d
          </text>
        </g>
      </g>
      <rect
        class="level"
        data-testid="level-high"
        fill="#3baa34"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="250"
        x="0"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-mid"
        fill="#fd9c00"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="200"
        x="250"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-low"
        fill="#e30713"
        height="200"
        opacity="0.2"
        visibility="visible"
        width="49.999999999999986"
        x="450"
        y="0"
      />
      <rect
        class="bar"
        data-testid="bar-a"
        fill="#00263d"
        height="22.22222222222222"
        width="500"
        x="0"
        y="22.22222222222223"
      />
      <rect
        class="bar"
        data-testid="bar-b"
        fill="#00263d"
        height="22.22222222222222"
        width="75"
        x="0"
        y="66.66666666666667"
      />
      <rect
        class="bar"
        data-testid="bar-c"
        fill="#00263d"
        height="22.22222222222222"
        width="150"
        x="0"
        y="111.11111111111111"
      />
      <rect
        class="bar"
        data-testid="bar-d"
        fill="#00263d"
        height="22.22222222222222"
        width="50"
        x="0"
        y="155.55555555555554"
      />
    </svg>
  </div>
</div>
`;

exports[`Render without levels @250px 1`] = `
<div>
  <div
    class="wrapper"
  >
    <svg
      class="barChart"
      height="200"
    >
      <g
        class="x-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="transform: translateY(200px);"
        text-anchor="middle"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            0%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(50.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            20%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(100.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            40%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(150.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            60%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(200.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            80%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(250.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            100%
          </text>
        </g>
      </g>
      <g
        class="y-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,33.33333333333334)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,77.77777777777779)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,122.22222222222223)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,166.66666666666666)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            d
          </text>
        </g>
      </g>
      <rect
        class="level"
        data-testid="level-high"
        fill="#3baa34"
        height="200"
        opacity="0.2"
        visibility="hidden"
        width="24.999999999999993"
        x="225"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-mid"
        fill="#fd9c00"
        height="200"
        opacity="0.2"
        visibility="hidden"
        width="100"
        x="125"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-low"
        fill="#e30713"
        height="200"
        opacity="0.2"
        visibility="hidden"
        width="125"
        x="0"
        y="0"
      />
      <rect
        class="bar"
        data-testid="bar-a"
        fill="#00263d"
        height="22.22222222222222"
        width="250"
        x="0"
        y="22.22222222222223"
      />
      <rect
        class="bar"
        data-testid="bar-b"
        fill="#00263d"
        height="22.22222222222222"
        width="37.5"
        x="0"
        y="66.66666666666667"
      />
      <rect
        class="bar"
        data-testid="bar-c"
        fill="#00263d"
        height="22.22222222222222"
        width="75"
        x="0"
        y="111.11111111111111"
      />
      <rect
        class="bar"
        data-testid="bar-d"
        fill="#00263d"
        height="22.22222222222222"
        width="25"
        x="0"
        y="155.55555555555554"
      />
    </svg>
  </div>
</div>
`;

exports[`Render without levels @500px 1`] = `
<div>
  <div
    class="wrapper"
  >
    <svg
      class="barChart"
      height="200"
    >
      <g
        class="x-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        style="transform: translateY(200px);"
        text-anchor="middle"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            0%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(100.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            20%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(200.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            40%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(300.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            60%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(400.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            80%
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(500.5,0)"
        >
          <line
            stroke="#D2D3D4"
            y2="-200"
          />
          <text
            dy="0.71em"
            fill="#828586"
            font-size="18.57px"
            y="3"
          >
            100%
          </text>
        </g>
      </g>
      <g
        class="y-axis"
        fill="none"
        font-family="sans-serif"
        font-size="10"
        text-anchor="end"
      >
        <g
          class="tick"
          opacity="1"
          transform="translate(0,33.33333333333334)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            a
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,77.77777777777779)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            b
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,122.22222222222223)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            c
          </text>
        </g>
        <g
          class="tick"
          opacity="1"
          transform="translate(0,166.66666666666666)"
        >
          <text
            dy="0.32em"
            fill="currentColor"
            x="-9"
          >
            d
          </text>
        </g>
      </g>
      <rect
        class="level"
        data-testid="level-high"
        fill="#3baa34"
        height="200"
        opacity="0.2"
        visibility="hidden"
        width="49.999999999999986"
        x="450"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-mid"
        fill="#fd9c00"
        height="200"
        opacity="0.2"
        visibility="hidden"
        width="200"
        x="250"
        y="0"
      />
      <rect
        class="level"
        data-testid="level-low"
        fill="#e30713"
        height="200"
        opacity="0.2"
        visibility="hidden"
        width="250"
        x="0"
        y="0"
      />
      <rect
        class="bar"
        data-testid="bar-a"
        fill="#00263d"
        height="22.22222222222222"
        width="500"
        x="0"
        y="22.22222222222223"
      />
      <rect
        class="bar"
        data-testid="bar-b"
        fill="#00263d"
        height="22.22222222222222"
        width="75"
        x="0"
        y="66.66666666666667"
      />
      <rect
        class="bar"
        data-testid="bar-c"
        fill="#00263d"
        height="22.22222222222222"
        width="150"
        x="0"
        y="111.11111111111111"
      />
      <rect
        class="bar"
        data-testid="bar-d"
        fill="#00263d"
        height="22.22222222222222"
        width="50"
        x="0"
        y="155.55555555555554"
      />
    </svg>
  </div>
</div>
`;
